--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -147,6 +147,7 @@ admin.product.producttypetabs.producttypesettings=Product Type Settings
 admin.product.producttypetabs.skusettings=Sku Settings
 admin.product.skutabs.accesscontents=Access Content
 admin.product.skutabs.alternateskucodes=Alternate Sku Codes
+admin.product.skutabs.inventory=Inventory
 admin.product.skutabs.options=Options
 admin.product.skutabs.priceGroups=Price Groups
 admin.product.skutabs.skusettings=Sku Settings
@@ -214,6 +215,7 @@ admin.vendor=Vendor Manager
 admin.vendor.addItems=Add Order Items
 admin.vendor.processVendorOrder_nav=Process Vendor Orders
 admin.vendor.processvendororder.processOption.cost=Cost
+admin.vendor.processvendororder.processOption.locationID=Location
 admin.vendor.processvendororder.processOption.quantity=Quantity
 admin.vendor.stockreceivers.missingProducts=You must enter order items before processing
 admin.vendor.vendorordertabs.items=Order Items
@@ -268,49 +270,49 @@ defaultMessage_Time={1} must be a valid time, between 00\:00 and 23\:59.
 defaultMessage_True={1} must be true.
 defaultMessage_URL={1} must be a valid URL.
 define.QATS=QATS
-define.QATS.full=Qty. Available To Sell
+define.QATS.full=Available To Sell
 define.QC=QC
-define.QC.full=Qty. Commited
+define.QC.full=Commited
 define.QE=QE
-define.QE.full=Qty. Expected
+define.QE.full=Expected
 define.QHB=QHB
-define.QHB.full=Qty. Held Back
+define.QHB.full=Held Back
 define.QIATS=QIATS
-define.QIATS.full=Qty. Immediately Available To Sell
+define.QIATS.full=Immediately Available To Sell
 define.QMAX=QMAX
-define.QMAX.full=Qty. Maximum
+define.QMAX.full=Maximum
 define.QMIN=QMIN
-define.QMIN.full=Qty. Minimum
+define.QMIN.full=Minimum
 define.QNC=QNC
-define.QNC.full=Qty. Not Commited
+define.QNC.full=Not Commited
 define.QNDOO=QNDOO
-define.QNDOO.full=Qty. Not Delivered On Order
+define.QNDOO.full=Not Delivered On Order
 define.QNDORVO=QNDORVO
-define.QNDORVO.full=Qty. Not Delivered On Return Vendor Order
+define.QNDORVO.full=Not Delivered On Return Vendor Order
 define.QNDOSA=QNDOSA
-define.QNDOSA.full=Qty. Not Delivered On Stock Adjustment
+define.QNDOSA.full=Not Delivered On Stock Adjustment
 define.QNRORO=QNRORO
-define.QNRORO.full=Qty. Not Received On Return Order
+define.QNRORO.full=Not Received On Return Order
 define.QNROSA=QNROSA
-define.QNROSA.full=Qty. Not Received On Stock Adjustment
+define.QNROSA.full=Not Received On Stock Adjustment
 define.QNROVO=QNROVO
-define.QNROVO.full=Qty. Not Received On Vendor Order
+define.QNROVO.full=Not Received On Vendor Order
 define.QOH=QOH
-define.QOH.full=Qty. On Hand
+define.QOH.full=On Hand
 define.QOMAX=QOMAX
-define.QOMAX.full=Qty. Max Per Order
+define.QOMAX.full=Max Per Order
 define.QOMIN=QOMIN
-define.QOMIN.full=Qty. Min Per Order
+define.QOMIN.full=Min Per Order
 define.QOSH=QOSH
-define.QOSH.full=Qty. On Stock Hold
+define.QOSH.full=On Stock Hold
 define.QR=QR
-define.QR.full=Qty. Received
+define.QR.full=Received
 define.QS=QS
-define.QS.full=Qty. Sold
+define.QS.full=Sold
 define.QVOMAX=QVOMAX
-define.QVOMAX.full=Qty. Max Per Order
+define.QVOMAX.full=Max Per Order
 define.QVOMIN=QVOMIN
-define.QVOMIN.full=Qty. Min Per Order
+define.QVOMIN.full=Min Per Order
 define.action=Action
 define.actions=Actions
 define.active=Active
@@ -364,7 +366,7 @@ define.order=Order
 define.percentageOff=Percentage Off
 define.print=Print
 define.process=Process
-define.quantityshipped=Qty. Shipped
+define.quantityshipped=Shipped
 define.range=Range
 define.rate=Rate
 define.renewal=Renewal
@@ -385,6 +387,7 @@ define.yes=Yes
 email.deliveryconfirmation=Delivery Confirmation
 email.orderConfirmation=Order Confirmation
 email.orderDeliveryConfirmation=Order Delivery Confirmation
+entity.AccountPaymentMethod_plural=Account Payment Methods
 entity.Address.norecords=No Addresses Defined
 entity.AlternateSkuCode=Alternate Sku Code
 entity.AlternateSkuCode.alternateSkuCode=Sku Code
@@ -419,6 +422,7 @@ entity.PermissionGroup.permissionGroupName=Permission Group Name
 entity.PriceGroupRate.DisplayName=Name
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.ProductImage.imageFile=Image
+entity.ProductImage_plural=Product Images
 entity.PromotionReward.applicableTerm=Applicable Subscription Term
 entity.PromotionReward.brands=Brands
 entity.PromotionReward.excludedBrands=Brand Exclusions
@@ -513,7 +517,6 @@ entity.account.remoteCustomerID=Remote Customer ID
 entity.account.remoteEmployeeID=Remote Employee ID
 entity.account.type=Type
 entity.accountPaymentMethod=Account Payment Method
-entity.AccountPaymentMethod_plural=Account Payment Methods
 entity.accountPaymentMethod.accountPaymentMethodName=Payment Method Name
 entity.accountPaymentMethod.creditCardLastFour=Credit Card
 entity.accountPaymentMethod.creditCardNumber=Credit Card Number
@@ -927,7 +930,6 @@ entity.product.webQC=webQC
 entity.product.webQEXP=webQEXP
 entity.product.webQOH=webQOH
 entity.productImage=Product Image
-entity.ProductImage_plural=Product Images
 entity.productImage.imageDescription=Image Description
 entity.productImage.imageName=Image Name
 entity.productImage.imageType=Image Type
