Lots of permission updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -10,6 +10,7 @@ admin.account.accounttabs.permissions=Permission Groups
 admin.account.accounttabs.pricegroups=Price Groups
 admin.account.accounttabs.productreviews=Product Reviews
 admin.account.accounttabs.subscriptionusage=Subscriptions
+admin.account.detailpermissiongroup.superuser_info=This is the super user permission group that can not be deleted or modified.  There is no need to set permissions for this group because any accounts assinged to this group has access to the entire application.
 admin.account.processsubscriptionusage.processContext=Action
 admin.account.processsubscriptionusage.processOption.cancelSubscription=Cancel Subscription
 admin.account.processsubscriptionusage.processOption.renewSubscription=Renew Subscription
@@ -348,6 +349,7 @@ define.here=Here
 define.inheritance=Inheritance
 define.inherited=Inherited
 define.initial=Initial
+define.integration=Integration
 define.international=International
 define.length=Length
 define.local=Local
@@ -365,6 +367,8 @@ define.ok=Ok
 define.option=Option
 define.order=Order
 define.percentageOff=Percentage Off
+define.permissions=Permissions
+define.premissions=Permissions
 define.print=Print
 define.process=Process
 define.quantityshipped=Shipped
@@ -419,6 +423,7 @@ entity.OrderDelivery_plural=Order Deliveries
 entity.OrderFulfillment.chargeAfterDiscount=Total Charge
 entity.OrderFulfillment.orderFulfillmentID=Order Fulfillment ID
 entity.OrderPayment.amountReceived=Amount Received
+entity.PermissionGroup.permissionGroupID=Permission Group ID
 entity.PermissionGroup.permissionGroupName=Permission Group Name
 entity.PriceGroupRate.DisplayName=Name
 entity.PriceGroupRate.roundingRule=Rounding Rule
@@ -1306,7 +1311,8 @@ permission.integration.editintegration=Integration - Edit
 permission.integration.listintegration=Integration - List
 permission.integration.saveintegration=Integration - Save
 permission.main=Main
-permission.main.default=Default
+permission.main.ckfinder=File Manager
+permission.main.default=Dashboard
 permission.order=Order
 permission.order.deleteOrder=Order - Delete
 permission.order.deleteOrderFullfillment=Order Fulfillment - Delete
