More permission updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -46,15 +46,13 @@ admin.define.save_title=Save ${itemEntityName}
 admin.detailshippingmethod.norates_info=Currently there are no rates defined for this shipping method.  You need to define at least one rate for this shipping method to be able to be used on the frontend.  When creating a new rate, you will be able to define which of the active shipping provider integrations you would like to use for the rate, or just define a static amount
 admin.export.list=Export Entire List
 admin.export.listfiltered=Export Filtered List
-admin.help=Help
-admin.help.about=About Slatwall
-admin.help.default=Help Dashboard
-admin.help_nav=Help
 admin.integration=Integration Management
 admin.integration.default=Integration Dashboard
 admin.integration.integrationtabs.settings=Integration Settings
 admin.integration_nav=Integrations
 admin.main=Dashboard
+admin.main.about=About
+admin.main.about_nav=About / Docs
 admin.main.ckfinder_nav=File Manager
 admin.main.dashboard.neworders=New Orders
 admin.main.dashboard.recentproductreviews=Recent Product Reviews
@@ -213,6 +211,7 @@ admin.setting.updateslatwall_confirm=ARE YOU SURE YOU WANT TO UPDATE SLATWALL
 admin.setting.updateslatwall_nav=Update Slatwall
 admin.setting.updateslatwall_success=Slatwall updated successfully
 admin.setting_nav=Settings
+admin.tools_nav=Tools / Help
 admin.vendor=Vendor Manager
 admin.vendor.addItems=Add Order Items
 admin.vendor.processVendorOrder_nav=Process Vendor Orders
