Minor UI change.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -161,6 +161,7 @@ admin.report_nav=Reporting
 admin.setting=Settings Manager
 admin.setting.addresszonetabs.locations=Locations
 admin.setting.attributesettabs.attributes=Attributes
+admin.setting.attributesettabs.description=Attribute Set Description
 admin.setting.attributetabs.attributeoptions=Attribute Options
 admin.setting.attributetabs.description=Description
 admin.setting.contenttabs.settings=Settings
