add functionality for processing tasks manually and e-mailing success/failures

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1647,3 +1647,5 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
+admin.setting.processtask_nav=Process Task
+admin.setting.processtask.processOption.taskScheduleID=Schedule
