Added the creation of the orderPayment

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -192,6 +192,8 @@ admin.setting.listsettingtabs.sku=Sku Settings
 admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
+admin.setting.processtask.processOption.taskScheduleID=Schedule
+admin.setting.processtask_nav=Process Task
 admin.setting.settingtabs.advanced=Advanced Settings
 admin.setting.shippingmethodratetabs.shippingmethodratesettings=Shipping Rate Settings
 admin.setting.shippingmethodtabs.shippingmethodrates=Shipping Rates
@@ -366,6 +368,7 @@ define.notconfirmed=The value that was entered does not match the 'confirm' valu
 define.ok=Ok
 define.option=Option
 define.order=Order
+define.payment=Payment
 define.percentageOff=Percentage Off
 define.permissions=Permissions
 define.premissions=Permissions
@@ -1648,5 +1651,3 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
-admin.setting.processtask_nav=Process Task
-admin.setting.processtask.processOption.taskScheduleID=Schedule
