Ability to take creditCard order payments.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -61,6 +61,7 @@ admin.main.dashboard.recentvendororderupdates=Recently Updated Vendor Orders
 admin.main.dashboard.recentvendorupdates=Recent Vendor Updates
 admin.main.default=Dashboard
 admin.order=Order Manager
+admin.order.createorderpayment.processOption.transactionType=Transaction Type
 admin.order.createreturnorder=Create Return Order
 admin.order.createreturnorder.processOption.quantity=Return Qty.
 admin.order.createreturnorder_nav=Create Return Order
