Major order service bugfix

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -71,6 +71,8 @@ admin.order.ordertabs.orderdeliveries=Order Deliveries
 admin.order.ordertabs.orderfulfillments=Order Fulfillments
 admin.order.ordertabs.orderitems=Order Items
 admin.order.ordertabs.orderpayments=Order Payments
+admin.order.ordertabs.orderreturns=Order Returns
+admin.order.ordertabs.stockreceivers=Stock Receivers
 admin.order.processOrderPayment_nav=Process Payment
 admin.order.processorder.createreturn=Create Retrun Order
 admin.order.processorder.createreturn_nav=Create Return Order
