Setting up Processing of Order Returns

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -90,6 +90,11 @@ admin.order.processorderfulfillment_nav=Process Fulfillment
 admin.order.processorderfulfillment_title=Process Order Fulfillment
 admin.order.processorderpayment.processOption.amount=Process Amount
 admin.order.processorderpayment.processOption.transactionType=Process Action
+admin.order.processorderreturn.processOption.boxCount=Box Count
+admin.order.processorderreturn.processOption.locationID=Receiving Location
+admin.order.processorderreturn.processOption.packingSlipNumber=Packing Slip Number
+admin.order.processorderreturn.processOption.processCreditCard=Process Credit Card Refund
+admin.order.processorderreturn.processOption.quantityReceived=Qty. To Receive
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.createpromotionrewardcontentaccess=Content Access Product Discount
@@ -435,6 +440,7 @@ entity.OrderDelivery.trackingNumber=Tracking Number
 entity.OrderDelivery_plural=Order Deliveries
 entity.OrderFulfillment.chargeAfterDiscount=Total Charge
 entity.OrderFulfillment.orderFulfillmentID=Order Fulfillment ID
+entity.OrderItem.quantityUnreceived=Qty. Unreceived
 entity.OrderPayment.amountReceived=Amount Received
 entity.PermissionGroup.permissionGroupID=Permission Group ID
 entity.PermissionGroup.permissionGroupName=Permission Group Name
@@ -831,6 +837,7 @@ entity.orderitem.price=Price
 entity.orderitem.profile=profile
 entity.orderitem.quantity=Qty.
 entity.orderitem.quantityDelivered=Qty. Delivered
+entity.orderitem.quantityReceived=Qty. Received
 entity.orderitem.sku=Sku
 entity.orderitem.status=Status
 entity.orderitem.stock=stock
@@ -843,6 +850,8 @@ entity.orderorigin.orderorigintype=Order Origin Type
 entity.orderorigin_plural=Order Origins
 entity.orderpayment=Order Payment
 entity.orderpayment_plural=Order Payments
+entity.orderreturn=Order Return
+entity.orderreturn_plural=Order Returns
 entity.ordertiem=Order Item
 entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
