--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -76,7 +76,8 @@ admin.order.ordertabs.stockreceivers=Stock Receivers
 admin.order.processOrderPayment_nav=Process Payment
 admin.order.processorder.createreturn=Create Retrun Order
 admin.order.processorder.createreturn_nav=Create Return Order
-admin.order.processorder.processOption.autoReceiveItemsFlag=Auto Receive Items
+admin.order.processorder.processOption.autoProcessReceiveReturnFlag=Auto Receive Return
+admin.order.processorder.processOption.autoProcessReturnPaymentFlag=Auto Process Return Credit
 admin.order.processorder.processOption.fulfillmentChargeRefundAmount=Fulfillment Charge Refund
 admin.order.processorder.processOption.returnLocationID=Return Location
 admin.order.processorder.processOption.returnPrice=Return Price
@@ -90,10 +91,11 @@ admin.order.processorderfulfillment_nav=Process Fulfillment
 admin.order.processorderfulfillment_title=Process Order Fulfillment
 admin.order.processorderpayment.processOption.amount=Process Amount
 admin.order.processorderpayment.processOption.transactionType=Process Action
+admin.order.processorderreturn.processOption.autoProcessReturnPaymentFlag=Auto Process Return Credit
+admin.order.processorderreturn.processOption.autoReceiveReturnFlag=Auto Receive Return
 admin.order.processorderreturn.processOption.boxCount=Box Count
 admin.order.processorderreturn.processOption.locationID=Receiving Location
 admin.order.processorderreturn.processOption.packingSlipNumber=Packing Slip Number
-admin.order.processorderreturn.processOption.processCreditCard=Process Credit Card Refund
 admin.order.processorderreturn.processOption.quantityReceived=Qty. To Receive
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
