More work on stock receivers.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -97,6 +97,7 @@ admin.order.processorderreturn.processOption.boxCount=Box Count
 admin.order.processorderreturn.processOption.locationID=Receiving Location
 admin.order.processorderreturn.processOption.packingSlipNumber=Packing Slip Number
 admin.order.processorderreturn.processOption.quantityReceived=Qty. To Receive
+admin.order.processorderreturn.receiveReturn=Receive Order Return
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.createpromotionrewardcontentaccess=Content Access Product Discount
@@ -251,6 +252,7 @@ admin.warehouse.processStockAdjustment_actions=Process Stock Adjustment
 admin.warehouse.processStockAdjustment_nav=Add Stock Adjustment Items
 admin.warehouse.processstockadjustment.processOption.quantity=Quantity
 admin.warehouse.stockadjustments.products=Products
+admin.warehouse.stockreceivertabs.stockreceiveritems=Items Received
 admin.warehouse_nav=Warehouse
 defaultMessage_Boolean={1} must be a valid boolean.
 defaultMessage_CollectionSize_Between={1} size is not between {2} and {3}.
