--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -348,10 +348,12 @@ define.backtolist=Back To List
 define.both=Both
 define.cancel=Cancel
 define.cart=Order
+define.charge=Charge
 define.comments=Comments
 define.confirm=Confirm
 define.contentAccess=Content Access
 define.create=Create
+define.credit=Credit
 define.definedin=Defined In
 define.delete=Delete
 define.detail=Detail
@@ -396,6 +398,7 @@ define.process=Process
 define.quantityshipped=Shipped
 define.range=Range
 define.rate=Rate
+define.refund=Refund
 define.renewal=Renewal
 define.save=Save
 define.search=Search
@@ -498,6 +501,8 @@ entity.Sku.priceGroupRates=Price Group Rates
 entity.Sku.userDefinedPriceFlag=User Defined Price
 entity.StockAdjustment.stockAdjustmentType=Type
 entity.StockAdjustmentItem_plural=Stock Adjustment Items
+entity.StockReceiver.receiverType.vendorOrder=Vendor Order
+entity.StockReceiver.stockReceiverID=Stock Receiver ID
 entity.StockReceiverVendorOrder_plural=Stock Receivers
 entity.SubscriptionTerm.autoPayFlag=Auto Pay
 entity.Task.TaskUrl=Task URL
@@ -909,6 +914,7 @@ entity.product.allowShippingFlag=Shipping OK
 entity.product.alternateImage=Alternate Image
 entity.product.alternateImages=Alternate Images
 entity.product.brand=Brand
+entity.product.calculatedTitle=Title
 entity.product.callToOrderFlag=Phone Order Only
 entity.product.dateFirstReceived=dateFirstReceived
 entity.product.dateLastReceived=dateLastReceived
@@ -1159,6 +1165,9 @@ entity.stock.qoh=qoh
 entity.stock.sku=sku
 entity.stock.stockID=stockID
 entity.stockAdjustmentItem.quantity=Qty.
+entity.stockReceiver.receiverType=Receiver Type
+entity.stockReceiver.receiverType.order=Order
+entity.stockReceiver.receiverType.stockAdjustment=Stock Adjustment
 entity.stockadjustment=Stock Adjustment
 entity.stockadjustment.adjustmentDateTime=adjustmentDateTime
 entity.stockadjustment.adjustmentType=adjustmentType
