More work on returns and processing.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -98,6 +98,7 @@ admin.order.processorderreturn.processOption.locationID=Receiving Location
 admin.order.processorderreturn.processOption.packingSlipNumber=Packing Slip Number
 admin.order.processorderreturn.processOption.quantityReceived=Qty. To Receive
 admin.order.processorderreturn.receiveReturn=Receive Order Return
+admin.order.processorderreturn.receiveReturn_nav=Receive
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.createpromotionrewardcontentaccess=Content Access Product Discount
