Working on Return orders.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -72,6 +72,7 @@ admin.order.ordertabs.orderfulfillments=Order Fulfillments
 admin.order.ordertabs.orderitems=Order Items
 admin.order.ordertabs.orderpayments=Order Payments
 admin.order.ordertabs.orderreturns=Order Returns
+admin.order.ordertabs.referencingOrders=Referencing Orders
 admin.order.ordertabs.stockreceivers=Stock Receivers
 admin.order.processOrderPayment_nav=Process Payment
 admin.order.processorder.createreturn=Create Retrun Order
@@ -437,9 +438,11 @@ entity.Option_plural=Options
 entity.Order.fulfillmentTotal=Delivery Charges
 entity.Order.fulfillmenttotal=Fulfillment Amount
 entity.Order.orderTota=Order Total
+entity.Order.paymentAmountCreditedTotal=Credited Amount
 entity.Order.paymentAmountTotal=Total Payments
 entity.Order.paymentAuthorizedTotal=Authorized Amount
 entity.Order.previouslyrefundedfulfillment=Previously Refunded Fulfillment
+entity.Order.referencedOrder=Original Order
 entity.Order.refundshippingamount=Refund Shipping Amount
 entity.Order.subtotal=Subtotal
 entity.Order.taxtotal=Tax Total
