Finishing up the return order stuff.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -80,6 +80,7 @@ admin.order.processorder.createreturn_nav=Create Return Order
 admin.order.processorder.processOption.autoProcessReceiveReturnFlag=Auto Receive Return
 admin.order.processorder.processOption.autoProcessReturnPaymentFlag=Auto Process Return Credit
 admin.order.processorder.processOption.fulfillmentChargeRefundAmount=Fulfillment Charge Refund
+admin.order.processorder.processOption.referencedOrderPaymentID=Payment to Credit
 admin.order.processorder.processOption.returnLocationID=Return Location
 admin.order.processorder.processOption.returnPrice=Return Price
 admin.order.processorder.processOption.returnQuantity=Return Quantity
@@ -97,7 +98,7 @@ admin.order.processorderreturn.processOption.autoReceiveReturnFlag=Auto Receive 
 admin.order.processorderreturn.processOption.boxCount=Box Count
 admin.order.processorderreturn.processOption.locationID=Receiving Location
 admin.order.processorderreturn.processOption.packingSlipNumber=Packing Slip Number
-admin.order.processorderreturn.processOption.quantityReceived=Qty. To Receive
+admin.order.processorderreturn.processOption.receiveQuantity=Qty. To Receive
 admin.order.processorderreturn.receiveReturn=Receive Order Return
 admin.order.processorderreturn.receiveReturn_nav=Receive
 admin.order_nav=Orders
