Added email setup

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -195,6 +195,8 @@ admin.setting.deleteaddresszonelocation_success=The location has successfully be
 admin.setting.deletesetting_nav=Remove Setting Override
 admin.setting.detailslatwallupdate=Slatwall Update Utility
 admin.setting.detailslatwallupdate_nav=Update Slatwall
+admin.setting.emailtemplatetabs.body=Email Body
+admin.setting.emailtemplatetabs.settings=Email Template Settings
 admin.setting.fulfillmentmethodtabs.fulfillmentsettings=Fulfillment Method Settings
 admin.setting.fulfillmentmethodtabs.shippingmethods=Shipping Methods
 admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
@@ -730,6 +732,15 @@ entity.define.norecords=There aren't any ${entityNamePlural}.
 entity.define.quantity=Qty.
 entity.define.remoteID=Remote ID
 entity.define.urlTitle=URL Title
+entity.email=Email
+entity.email_plural=Emails
+entity.email.emailName=Email Name
+entity.email.emailTemplate=Email Template
+entity.emailTemplate=Email Template
+entity.emailTemplate_plural=Email Templates
+entity.emailTemplate.emailTemplateName=Template Name
+entity.emailTemplate.emailBodyHTML=Body HTML
+entity.emailTemplate.emailBodyText=Body Text
 entity.fulfillment=Fulfillment
 entity.fulfillmentmethod=Fulfillment Method
 entity.fulfillmentmethod.fulfillmentmethodID=Fulfillment Method ID
@@ -1567,6 +1578,11 @@ setting.contentRestrictAccessFlag=Restrict access
 setting.contentRestrictAccessFlag_hint=Restrict access through subscription and/or purchase
 setting.contentRestrictedContentDisplayTemplate=Restricted Content template
 setting.contentRestrictedContentDisplayTemplate_hint=Barrier page or pay-wall template
+setting.emailFromAddress=Email From Address
+setting.emailToAddress=Email To Address
+setting.emailCCAddress=Email CC Address
+setting.emailBCCAddress=Email BCC Address
+setting.emailSubject=Email Subject
 setting.fulfillmentMethodAutoLocation=Automatic Fulfillment Location
 setting.fulfillmentMethodAutoLocation_hint=This location will be used for an 'auto' fulfillment methods.  It can be overridden in each 'auto' fulfillment method if you create multiple
 setting.fulfillmentMethodEmailCC=Email CC
