--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -196,7 +196,9 @@ admin.setting.deletesetting_nav=Remove Setting Override
 admin.setting.detailslatwallupdate=Slatwall Update Utility
 admin.setting.detailslatwallupdate_nav=Update Slatwall
 admin.setting.emailtemplatetabs.body=Email Body
+admin.setting.emailtemplatetabs.htmlbody=HTML Body
 admin.setting.emailtemplatetabs.settings=Email Template Settings
+admin.setting.emailtemplatetabs.textbody=Text Body
 admin.setting.fulfillmentmethodtabs.fulfillmentsettings=Fulfillment Method Settings
 admin.setting.fulfillmentmethodtabs.shippingmethods=Shipping Methods
 admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
@@ -733,14 +735,14 @@ entity.define.quantity=Qty.
 entity.define.remoteID=Remote ID
 entity.define.urlTitle=URL Title
 entity.email=Email
-entity.email_plural=Emails
 entity.email.emailName=Email Name
 entity.email.emailTemplate=Email Template
 entity.emailTemplate=Email Template
-entity.emailTemplate_plural=Email Templates
-entity.emailTemplate.emailTemplateName=Template Name
 entity.emailTemplate.emailBodyHTML=Body HTML
 entity.emailTemplate.emailBodyText=Body Text
+entity.emailTemplate.emailTemplateName=Template Name
+entity.emailTemplate_plural=Email Templates
+entity.email_plural=Emails
 entity.fulfillment=Fulfillment
 entity.fulfillmentmethod=Fulfillment Method
 entity.fulfillmentmethod.fulfillmentmethodID=Fulfillment Method ID
@@ -1578,11 +1580,11 @@ setting.contentRestrictAccessFlag=Restrict access
 setting.contentRestrictAccessFlag_hint=Restrict access through subscription and/or purchase
 setting.contentRestrictedContentDisplayTemplate=Restricted Content template
 setting.contentRestrictedContentDisplayTemplate_hint=Barrier page or pay-wall template
-setting.emailFromAddress=Email From Address
-setting.emailToAddress=Email To Address
-setting.emailCCAddress=Email CC Address
 setting.emailBCCAddress=Email BCC Address
+setting.emailCCAddress=Email CC Address
+setting.emailFromAddress=Email From Address
 setting.emailSubject=Email Subject
+setting.emailToAddress=Email To Address
 setting.fulfillmentMethodAutoLocation=Automatic Fulfillment Location
 setting.fulfillmentMethodAutoLocation_hint=This location will be used for an 'auto' fulfillment methods.  It can be overridden in each 'auto' fulfillment method if you create multiple
 setting.fulfillmentMethodEmailCC=Email CC
