Couple more email management updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -438,6 +438,7 @@ entity.CreditCardTransaction.providerTransactionID=Provider Transaction ID
 entity.CreditCardTransaction.statusCode=Status Code
 entity.CreditCardTransaction.transactionType=Transaction Type
 entity.CreditCardTransaction_plural=Credit Card Transactions
+entity.Email.eventName=Event Name
 entity.EmailTemplate.emailTemplateID=Email Template ID
 entity.Integration.fw1ActiveFlag=FW1 Subsystem Active
 entity.Option_plural=Options
