added the orderItem list.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -103,6 +103,11 @@ admin.order.processorderreturn.receiveReturn=Receive Order Return
 admin.order.processorderreturn.receiveReturn_nav=Receive
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
+admin.pricing.createpromotionqualifiercontentaccess=Content Access Item Qualifier
+admin.pricing.createpromotionqualifierfulfillment=Fulfilment Qualifier
+admin.pricing.createpromotionqualifiermerchandise=Merchandise Item Qualifier
+admin.pricing.createpromotionqualifierorder=Order Qualifier
+admin.pricing.createpromotionqualifiersubscription=Subscription Item Qualifier
 admin.pricing.createpromotionrewardcontentaccess=Content Access Product Discount
 admin.pricing.createpromotionrewardfulfillment=Fulfillment Discount
 admin.pricing.createpromotionrewardmerchandise=Merchandise Product Discount
