subscription reminder fixes

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1232,6 +1232,7 @@ entity.subscriptionTerm.billedOnDayOfMonth=Bill On Day of Month
 entity.subscriptionTerm.gracePeriodTerm=Grace Period Term
 entity.subscriptionTerm.initialTerm=Initial Term
 entity.subscriptionTerm.renewalTerm=Renewal Term
+entity.subscriptionTerm.renewalReminderDays=Renewal Reminder Days
 entity.subscriptionTerm.subscriptionBenefits=Subscription Benefits
 entity.subscriptionTerm.subscriptionTermName=Subscription Term Name
 entity.subscriptionUsage=Subscription Usage
