Cleaning up the promotion layout.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -127,6 +127,14 @@ admin.pricing.promotionreward.discounttype.amount=Fixed Amount
 admin.pricing.promotionreward.discounttype.amountOff=Amount Off
 admin.pricing.promotionreward.discounttype.percentageOff=Percentage Off
 admin.pricing.promotionreward.editdisabled=This promotion reward cannot be edited because its promotion period has expired.
+admin.pricing.promotionrewardtabs.brands=Brands
+admin.pricing.promotionrewardtabs.fulfillmentmethods=Fulfillment Methods
+admin.pricing.promotionrewardtabs.options=Options
+admin.pricing.promotionrewardtabs.productTypes=Product Types
+admin.pricing.promotionrewardtabs.products=Products
+admin.pricing.promotionrewardtabs.shippingaddresszones=Shipping Address Zones
+admin.pricing.promotionrewardtabs.shippingmethods=Shipping Methods
+admin.pricing.promotionrewardtabs.skus=Skus
 admin.pricing.promotiontabs.promotioncodes=Promotion Codes
 admin.pricing.promotiontabs.promotiondescription=Description
 admin.pricing.promotiontabs.promotionperiods=Promotion Periods
@@ -484,6 +492,7 @@ entity.PromotionReward.maximumUsePerOrder_hint=This defines the maximum number o
 entity.PromotionReward.maximumUsePerQualification=Maximum Use Per Qualification
 entity.PromotionReward.maximumUsePerQualification_hint=This setting is mostly used in defining things like buy one get one free where you would qualify by having a quantity of 2 of an item, and then this would be set to 1 with 100% discount.  If there are no qualifiers than this setting is never used.
 entity.PromotionReward.options=Options
+entity.PromotionReward.promotionRewardID=Promotion Reward ID
 entity.PromotionReward.roundingRule=Rounding Rule
 entity.PromotionReward.shippingAddressZones=Shipping Address Zones
 entity.PromotionReward.shippingAmount=Shipping Rate Fixed Amount
@@ -1231,8 +1240,8 @@ entity.subscriptionTerm.autoRetryPaymentDays=Auto Retry After Days
 entity.subscriptionTerm.billedOnDayOfMonth=Bill On Day of Month
 entity.subscriptionTerm.gracePeriodTerm=Grace Period Term
 entity.subscriptionTerm.initialTerm=Initial Term
-entity.subscriptionTerm.renewalTerm=Renewal Term
 entity.subscriptionTerm.renewalReminderDays=Renewal Reminder Days
+entity.subscriptionTerm.renewalTerm=Renewal Term
 entity.subscriptionTerm.subscriptionBenefits=Subscription Benefits
 entity.subscriptionTerm.subscriptionTermName=Subscription Term Name
 entity.subscriptionUsage=Subscription Usage
@@ -1241,8 +1250,8 @@ entity.subscriptionUsage.allowProrateFlag=Allow Prorate
 entity.subscriptionUsage.autoPayFlag=Auto Pay
 entity.subscriptionUsage.autoRenewFlag=Auto Renew
 entity.subscriptionUsage.currentStatusType=Current Status
-entity.subscriptionUsage.gracePeriodTerm=Grace Period
 entity.subscriptionUsage.expirationDate=Expiration Date
+entity.subscriptionUsage.gracePeriodTerm=Grace Period
 entity.subscriptionUsage.nextBillDate=Next Bill Date
 entity.subscriptionUsage.renewalPrice=Renewal Price
 entity.subscriptionUsage.subscriptionOrderItemName=Subscription Item
