--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -186,6 +186,9 @@ admin.product.skutabs.options=Options
 admin.product.skutabs.priceGroups=Price Groups
 admin.product.skutabs.skusettings=Sku Settings
 admin.product.skutabs.subscription=Subscription
+admin.product.subscriptionbenefittabs.categories=Categories
+admin.product.subscriptionbenefittabs.contents=Contents
+admin.product.subscriptionbenefittabs.pricegroups=Price Groups
 admin.product.updatePrice_nav=Update Price
 admin.product_nav=Products
 admin.producttype.settingdefinedin=Setting Defined In
@@ -529,6 +532,7 @@ entity.StockAdjustmentItem_plural=Stock Adjustment Items
 entity.StockReceiver.receiverType.vendorOrder=Vendor Order
 entity.StockReceiver.stockReceiverID=Stock Receiver ID
 entity.StockReceiverVendorOrder_plural=Stock Receivers
+entity.SubscriptionBenefit.subscriptionBenefitID=Subscription Benefit ID
 entity.SubscriptionTerm.autoPayFlag=Auto Pay
 entity.Task.TaskUrl=Task URL
 entity.Task.nextRunDateTime=Next Run
@@ -1229,6 +1233,7 @@ entity.stockreceivervendororder.packingSlipNumber=Packing Slip Number
 entity.subscriptionBenefit.accessType=Access Type
 entity.subscriptionBenefit.categories=Categories
 entity.subscriptionBenefit.contents=Contents
+entity.subscriptionBenefit.excludedcategories=Excluded Categories
 entity.subscriptionBenefit.maxUseCount=Max Use Count
 entity.subscriptionBenefit.priceGroups=Price Groups
 entity.subscriptionBenefit.promotions=Promotions
