--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1234,6 +1234,7 @@ entity.subscriptionBenefit.accessType=Access Type
 entity.subscriptionBenefit.categories=Categories
 entity.subscriptionBenefit.contents=Contents
 entity.subscriptionBenefit.excludedcategories=Excluded Categories
+entity.subscriptionBenefit.excludedcontents=Excluded Contents
 entity.subscriptionBenefit.maxUseCount=Max Use Count
 entity.subscriptionBenefit.priceGroups=Price Groups
 entity.subscriptionBenefit.promotions=Promotions
