--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -199,6 +199,7 @@ admin.setting=Settings Manager
 admin.setting.addresszonetabs.locations=Locations
 admin.setting.attributesettabs.attributes=Attributes
 admin.setting.attributesettabs.description=Attribute Set Description
+admin.setting.attributesettabs.producttypes=Product Types
 admin.setting.attributetabs.attributeoptions=Attribute Options
 admin.setting.attributetabs.description=Description
 admin.setting.contenttabs.settings=Settings
