Cleaning up attribute administration.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -447,6 +447,9 @@ entity.AlternateSkuCode=Alternate Sku Code
 entity.AlternateSkuCode.alternateSkuCode=Sku Code
 entity.AlternateSkuCode.alternateSkuCodeType=Sku Code Type
 entity.AlternateSkuCode_plural=Alternate Sku Codes
+entity.AttributeSet.accountSaveFlag=Enable Account Saving
+entity.AttributeSet.additionalCharge=Additional Charge
+entity.AttributeSet.requiredFlag=Required Flag
 entity.Comment.publicFlag=Public
 entity.CreditCardTransaction=Credit Card Transaction
 entity.CreditCardTransaction.avsCode=AVS Code
