Finished attribute admin, Setup Encrypted attributes, also resolves issue #528

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -447,6 +447,7 @@ entity.AlternateSkuCode=Alternate Sku Code
 entity.AlternateSkuCode.alternateSkuCode=Sku Code
 entity.AlternateSkuCode.alternateSkuCodeType=Sku Code Type
 entity.AlternateSkuCode_plural=Alternate Sku Codes
+entity.Attribute.decryptValueInAdminFlag=Decrypt Value In Admin
 entity.AttributeSet.accountSaveFlag=Enable Account Saving
 entity.AttributeSet.additionalCharge=Additional Charge
 entity.AttributeSet.requiredFlag=Required Flag
