Generic listing fixes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -11,14 +11,14 @@ admin.account.accounttabs.pricegroups=Price Groups
 admin.account.accounttabs.productreviews=Product Reviews
 admin.account.accounttabs.subscriptionusage=Subscriptions
 admin.account.detailpermissiongroup.superuser_info=This is the super user permission group that can not be deleted or modified.  There is no need to set permissions for this group because any accounts assinged to this group has access to the entire application.
-admin.account.processsubscriptionusage_title=Process Subscription Usage
-admin.account.processsubscriptionusage.processContext=Action
 admin.account.processsubscriptionusage.cancelSubscription_nav=Cancel Subscription
+admin.account.processsubscriptionusage.processContext=Action
 admin.account.processsubscriptionusage.renewSubscription_nav=Renew Subscription
 admin.account.processsubscriptionusage.updateSubscription_nav=Update Subscription Status
-admin.account.subscriptionusagetabs.usagebenifits=Subscription Usage Benefits
-admin.account.subscriptionusagetabs.renewalusagebenefits=Renewal Usage Benefits
+admin.account.processsubscriptionusage_title=Process Subscription Usage
 admin.account.subscriptionusagetabs.orderitems=Order Items
+admin.account.subscriptionusagetabs.renewalusagebenefits=Renewal Usage Benefits
+admin.account.subscriptionusagetabs.usagebenifits=Subscription Usage Benefits
 admin.account_nav=Accounts
 admin.define.create=Create ${itemEntityName}
 admin.define.create_nav=Add ${itemEntityName}
@@ -414,6 +414,7 @@ define.no=No
 define.none=None
 define.notapplicable=N/A
 define.notconfirmed=The value that was entered does not match the 'confirm' value.
+define.of=Of
 define.ok=Ok
 define.option=Option
 define.order=Order
@@ -433,6 +434,7 @@ define.search=Search
 define.select=Select
 define.selectall=Select All
 define.show=Show
+define.showing=Showing
 define.sort=Sort
 define.status=Status
 define.subscription=Subscription
