--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -216,9 +216,10 @@ admin.setting.deleteaddresszonelocation_success=The location has successfully be
 admin.setting.deletesetting_nav=Remove Setting Override
 admin.setting.detailslatwallupdate=Slatwall Update Utility
 admin.setting.detailslatwallupdate_nav=Update Slatwall
+admin.setting.emailtabs.emailsettings=Email Settings
 admin.setting.emailtemplatetabs.body=Email Body
+admin.setting.emailtemplatetabs.emailsettings=Email Settings
 admin.setting.emailtemplatetabs.htmlbody=HTML Body
-admin.setting.emailtemplatetabs.settings=Email Template Settings
 admin.setting.emailtemplatetabs.textbody=Text Body
 admin.setting.fulfillmentmethodtabs.fulfillmentsettings=Fulfillment Method Settings
 admin.setting.fulfillmentmethodtabs.shippingmethods=Shipping Methods
@@ -465,6 +466,7 @@ entity.CreditCardTransaction.providerTransactionID=Provider Transaction ID
 entity.CreditCardTransaction.statusCode=Status Code
 entity.CreditCardTransaction.transactionType=Transaction Type
 entity.CreditCardTransaction_plural=Credit Card Transactions
+entity.Email.emailID=Email ID
 entity.Email.eventName=Event Name
 entity.EmailTemplate.emailTemplateID=Email Template ID
 entity.Integration.fw1ActiveFlag=FW1 Subsystem Active
