--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1243,12 +1243,12 @@ entity.stockreceiver.packingSlipNumber=Packing Slip Number
 entity.stockreceiver_plural=Stock Receivers
 entity.stockreceivervendororder.boxCount=Box Count
 entity.stockreceivervendororder.packingSlipNumber=Packing Slip Number
-entity.subscriptionBenefit.accessType=Access Type
+entity.subscriptionBenefit.accessType=Access Code Generation Type
 entity.subscriptionBenefit.categories=Categories
 entity.subscriptionBenefit.contents=Contents
 entity.subscriptionBenefit.excludedcategories=Excluded Categories
 entity.subscriptionBenefit.excludedcontents=Excluded Contents
-entity.subscriptionBenefit.maxUseCount=Max Use Count
+entity.subscriptionBenefit.maxUseCount=Maximum Use Per Access Code
 entity.subscriptionBenefit.priceGroups=Price Groups
 entity.subscriptionBenefit.promotions=Promotions
 entity.subscriptionBenefit.subscriptionBenefitName=Subscription Benefit Name
