Working on images, and fixed a bug in creating return orders.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -782,9 +782,12 @@ entity.fulfillmentmethod.fulfillmentmethodID=Fulfillment Method ID
 entity.fulfillmentmethod.fulfillmentmethodname=Fulfillment Method Name
 entity.fulfillmentmethod.fulfillmentmethodtype=Fulfillment Method Type
 entity.fulfillmentmethod_plural=Fulfillment Methods
+entity.image=Image
 entity.image.imageDescription=Image Description
+entity.image.imageFile=Image
 entity.image.imageName=Image Name
 entity.image.imageType=Image Type
+entity.image_plural=Images
 entity.integration=Integration
 entity.integration.customActiveFlag=Custom Integration Active
 entity.integration.dataActiveFlag=Data Integration Active
