Lots of updates to promotion qualifiers in admin.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -121,6 +121,7 @@ admin.pricing.deletepromotionperiod_disabled=This promotion period cannot be del
 admin.pricing.deletepromotionqualifier_disabled=This promotion qualifier cannot be deleted because it has been used in a transtacion and/or its promotion period has expired.
 admin.pricing.deletepromotionreward_disabled=This promotion reward cannot be deleted because it has been used in a transtacion and/or its promotion period has expired.
 admin.pricing.detailpromotion=Promotion Detail
+admin.pricing.detailpromotion.initialperiod=Initial Period
 admin.pricing.pricegrouptabs.pricegrouprates=Price Group Rates
 admin.pricing.promotionperiod.editdisabled_info=This promotion period cannot be edited because it has expired.
 admin.pricing.promotionperiodtabs.promotionperiodcodes=Promotion Codes
@@ -495,6 +496,13 @@ entity.PriceGroupRate.DisplayName=Name
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.ProductImage.imageFile=Image
 entity.ProductImage_plural=Product Images
+entity.PromotionQualifier.maximumItemPrice=Maximum Item Price
+entity.PromotionQualifier.maximumItemQuantity=Maximum Item Quantity
+entity.PromotionQualifier.maximumOrderQuantity=Maximum Order Quantity
+entity.PromotionQualifier.maximumOrderSubtotal=Maximum Order Subtotal
+entity.PromotionQualifier.minimumFulfillmentWeight=Minimum Fulfillment Weight
+entity.PromotionQualifier.minimumItemPrice=Minimum Item Price
+entity.PromotionQualifier.minimumOrderSubtotal=Minimum Order Subtotal
 entity.PromotionReward.applicableTerm=Applicable Subscription Term
 entity.PromotionReward.brands=Brands
 entity.PromotionReward.excludedBrands=Brand Exclusions
